# MallocWorld

./: .gitignore  CMakeLists.txt  README.md
resources/: collect_resources.txt  config.yaml  save.exemple.txt  save.txt  tools.txt
sources/: main.c  main.h  test.c  test.h
sources/ resources_reappearance/: resources_reappearance .c  resources_reappearance .h
sources/bag/: bag.c  bag.h  bag_items.h  bag_objects.h  item_id.h  item_type.h  item_types.h
sources/bag/armor/: armor.c
sources/bag/heal/: heal.c  heal.h
sources/bag/resource/: resource.h
sources/bag/tests/: test_bag.c  test_bag.h
sources/bag/tool/: tool.c
sources/bag/weapon/: weapon.c
sources/character/: character.c  character.h  player.c  player.h
sources/character/test/: testCharacter.c  testCharacter.h
sources/character/tests/: test_player.c  test_player.h
sources/chess/: chest.c  chest.h
sources/chest/: chest.c  chest.h
sources/chest/tests/: testChest.c  testChest.h  test_chest.c  test_chest.h
sources/cli/: cli.c  cli.h
sources/collect_resources/: collect_resources.c  collect_resources.h
sources/collect_resources/tests/: test_collect_resouces.c  test_collect_resouces.h  test_collect_resources.c  test_collect_resources.h
sources/config/: config.c  config.h
sources/craft/: craft.c  craft.h
sources/craft/tests/: test_craft.c  test_craft.h
sources/item/: item.c  item.h  item_id.h  item_type.h  material.h
sources/item/armor/: armor.h
sources/item/craft_resource/: craft_resource.c  craft_resource.h
sources/item/heal/: heal.c  heal.h
sources/item/resource/: resource.c
sources/item/tests/: test_item.c  test_item.h
sources/item/tool/: tool.c  tool.h  tool_family.h  tool_type.h
sources/item/weapon/: weapon.c  weapon.h
sources/map/: cell.c  cell.h  cell_value.h  grid_values.h  map.c  map.h
sources/map/test/: testMap.c  testMap.h
sources/monster/: monster.c  monster.h
sources/monster/test_monster/: test_monster.c  test_monster.h
sources/movement/: direction.h  location.c  location.h  movement.c  movement.h
sources/movement/tests/: test_movement.c  test_movement.h
sources/npc/: npc.c  npc.h
sources/npc/tests/: test_npc.c  test_npc.h
sources/perlin_noise/: perlin_noise.c  perlin_noise.h
sources/player/: player.c  player.h
sources/player/tests/: test_player.c  test_player.h
sources/random/: random.c  random.h
sources/resources_reappearance/: resources_reappearance.c  resources_reappearance.h
sources/resources_reappearance/tests/: test_resouces_reappearance.c  test_resouces_reappearance.h
sources/save/: save.c  save.h
sources/start/: start.c  start.h
sources/tests/: test.c  test.h
sources/turn_based/: turnBased.c  turnBased.h  turn_based.c  turn_based.h
sources/turn_based/tests/: test_turn_based.c  test_turn_based.h
sources/zone/: zone.c  zone.h
